# cs1230final

./: .gitignore  .ninja_deps  .ninja_log  CMakeLists.txt  README.md  projects_realtime  submission-action.md  submission-lights-camera.md
.cmake/api/v1/reply/: cache-v2-b5c79e9b611153f9ac16.json
.cmake/api/v1/reply.prev/: index-2024-12-05T20-11-21-0959.json
cmd/graphics/: .gitmodules  .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  client.cpp  cmake_install.cmake  projects_realtime
cmd/graphics/.cmake/api/v1/reply/: codemodel-v2-f0fd4741573323933235.json  directory-entt-Release-b31a33a2614e96e289c4.json  index-2024-12-05T20-21-37-0263.json  target-StaticGLEW-Release-83281525392510961be9.json  target-projects_realtime-Release-5bdd545cec09028d8fbb.json  target-projects_realtime_other_files-Release-4c624dbc224778ef1238.json
cmd/graphics/.cmake/api/v1/reply.prev/: cmakeFiles-v1-f430394d34bcfb1c858e.json  codemodel-v2-d443873673261046b26f.json  target-StaticGLEW-Release-d4e2f522900614d2b8f1.json  target-projects_realtime-Release-0bc13db36c88192d3b32.json  target-projects_realtime_other_files-Release-cc057a698faadf4a9f91.json
cmd/graphics/.qt/: QtDeploySupport.cmake
cmd/graphics/.rcc/: Resources.qrc
cmd/graphics/StaticGLEW_autogen/: deps
cmd/graphics/resources/shaders/: default.frag  default.vert  skybox.frag  skybox.vert  texture.frag
cmd/graphics/scenefiles/action/: default.json
cmd/graphics/src/: clientarm.cpp  clientarm.h  clientwin.cpp  clientwin.h  main.cpp  mainwindow.cpp  mainwindow.h  realtime.cpp  realtime.h  settings.h  udpclientarm.cpp  udpclientarm.h  udpclientwin.cpp  udpclientwin.h
cmd/graphics/src/shapes/: cone.cpp  cone.h  cube.cpp  cube.h  cylinder.cpp  cylinder.h  sphere.cpp
cmd/networks/: Makefile  a.txt  go.mod  go.sum  vserver_udp
cmd/networks/client/: client.go
cmd/networks/proto/: game.proto
cmd/networks/server/: server.go
cmd/networks/serverudp/: server.go
cmd/networks/structs/: structs.go
cmd/networks/utils/: utils.go
glm/: cmake_install.cmake
projects_realtime_autogen/: deps
resources/shaders/: default.frag  default.vert  skybox.frag  skybox.vert  texture.vert
src/: realtime.cpp  realtime.h
src/camera/: camera.cpp  camera.h
src/shapes/: cone.cpp  sphere.cpp  sphere.h
src/utils/: sceneparser.cpp  sceneparser.h
